--- a/php5/Dockerfile
+++ b/php5/Dockerfile
@@ -5,16 +5,15 @@ MAINTAINER DuckLL <a347liao@gmail.com>
 EXPOSE 80
 
 # apt-get
-RUN apt-fast update \
-&& apt-fast -y install \
-   net-tools \
-&& apt-fast clean \
+RUN apt-fast -y install \
+    net-tools \
+&& apt-fast clean
 
 # install lnmp
-&& wget -c http://soft.vpser.net/lnmp/lnmp1.4.tar.gz && tar -zxf ./lnmp1.4.tar.gz \
-&& cd lnmp1.4 && wget https://raw.githubusercontent.com/DuckLL/lnmp/master/php5/install.conf && cat install.conf | ./install.sh \
-&& cd ../ && rm -rf lnmp1.4.tar.gz lnmp1.4 \
+RUN wget http://soft.vpser.net/lnmp/lnmp1.3.tar.gz && tar -xvf ./lnmp1.3.tar.gz \
+&& cd lnmp1.3 && wget https://raw.githubusercontent.com/DuckLL/lnmp/master/php5/install.conf && cat install.conf | ./install.sh \
+&& cd ../ && rm -rf lnmp1.3.tar.gz lnmp1.3
 
 # set lnmp start
-&& wget https://raw.githubusercontent.com/DuckLL/lnmp/master/lnmp.sh -O /etc/my_init.d/lnmp.sh \
+RUN wget https://raw.githubusercontent.com/DuckLL/lnmp/master/lnmp.sh -O /etc/my_init.d/lnmp.sh \
 && chmod +x /etc/my_init.d/lnmp.sh
